--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "repository": {
+        "url": "https://github.com/1494518217/npm-cut-source",
+        "type": "git"
+  },
   "author": "tl",
   "license": "ISC",
   "dependencies": {
